--- a/src/main/resources/in/saeakgec/supra/view/Auth.fxml
+++ b/src/main/resources/in/saeakgec/supra/view/Auth.fxml
@@ -1,39 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Rectangle2D?>
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="in.saeakgec.supra.controller.AuthController">
+<AnchorPane prefHeight="800.0" prefWidth="800.0" styleClass="root" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="in.saeakgec.supra.controller.AuthController">
+   <stylesheets>
+      <URL value="@../css/Auth.css" />
+   </stylesheets>
    <children>
-      <BorderPane layoutX="200" layoutY="200" prefHeight="400.0" prefWidth="400.0">
-         <top>
-            <ImageView fitHeight="150.0" fitWidth="150.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="false" BorderPane.alignment="CENTER">
-               <viewport>
-                  <Rectangle2D height="150.0" minX="150.0" minY="150.0" width="150.0" />
-               </viewport>
-               <image>
-                  <Image url="@../img/logo.png" />
-               </image>
-            </ImageView>
-         </top>
-         <bottom>
-            <Button mnemonicParsing="false" text="Log in" BorderPane.alignment="CENTER" />
-         </bottom>
-         <center>
-            <HBox prefHeight="172.0" prefWidth="400.0" BorderPane.alignment="CENTER">
+      <GridPane prefHeight="800.0" prefWidth="800.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="261.0" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="642.0" minWidth="10.0" prefWidth="600.0" />
+           <ColumnConstraints hgrow="SOMETIMES" maxWidth="177.0" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="315.0" minHeight="10.0" prefHeight="200.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="547.0" minHeight="10.0" prefHeight="400.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="210.0" minHeight="10.0" prefHeight="200.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <VBox prefHeight="200.0" prefWidth="100.0" styleClass="tile-box" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <TextField promptText="Username" />
-                  <PasswordField promptText="Password" />
+                  <HBox alignment="CENTER" prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../img/logo.png" />
+                           </image></ImageView>
+                     </children></HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <TextField promptText="Username" styleClass="form" />
+                        <PasswordField promptText="Password" styleClass="form" />
+                     </children></HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Button mnemonicParsing="false" styleClass="btn, btn-info, btn-block" text="Log in" />
+                     </children></HBox>
                </children>
-            </HBox>
-         </center>
-      </BorderPane>
+            </VBox>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
