--- a/src/main/resources/in/saeakgec/supra/view/Dashboard.fxml
+++ b/src/main/resources/in/saeakgec/supra/view/Dashboard.fxml
@@ -1,14 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="in.saeakgec.supra.view.Dashboard"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="in.saeakgec.supra.view.Dashboard">
+   <children>
+      <Pane layoutX="0" layoutY="0.0" prefHeight="100.0" prefWidth="800.0">
+         <children>
+            <HBox layoutX="46.0" layoutY="27.0" prefHeight="46.0" prefWidth="281.0">
+               <children>
+                  <Button mnemonicParsing="false" text="Button" />
+                  <Label prefHeight="32.0" prefWidth="123.0" text="Label" />
+               </children>
+            </HBox>
+         </children></Pane>
+      <Pane layoutX="0.0" layoutY="100.0" prefHeight="700.0" prefWidth="800.0">
+         <children>
+            <SplitPane dividerPositions="0.48484848484848486" layoutX="1.0" layoutY="1.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="800.0">
+              <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                     <children>
+                        <ScrollPane layoutX="-2.0" layoutY="55.0" prefHeight="279.0" prefWidth="798.0" />
+                        <Label layoutX="18.0" layoutY="5.0" prefHeight="46.0" prefWidth="165.0" text="Label" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                     <children>
+                        <ScrollPane layoutX="-2.0" layoutY="55.0" prefHeight="279.0" prefWidth="798.0" />
+                        <Label layoutX="18.0" layoutY="5.0" prefHeight="46.0" prefWidth="165.0" text="Label" />
+                     </children>
+                  </AnchorPane>
+              </items>
+            </SplitPane>
+         </children></Pane>
+   </children>
 </AnchorPane>
