--- a/src/main/resources/in/saeakgec/supra/view/Race.fxml
+++ b/src/main/resources/in/saeakgec/supra/view/Race.fxml
@@ -1,14 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.lynden.gmapsfx.ClusteredGoogleMapView?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import org.kordamp.bootstrapfx.scene.layout.Panel?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="in.saeakgec.supra.view.Race"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="in.saeakgec.supra.controller.RaceController">
+    <stylesheets>
+        <URL value="@../css/Race.css" />
+    </stylesheets>
+    <children>
+      <TitledPane prefHeight="800.0" prefWidth="791.0" text="Bravado">
+         <content>
+            <VBox prefHeight="417.0" prefWidth="198.0">
+               <children>
+                  <SplitPane dividerPositions="0.31681877444589307" prefHeight="762.0" prefWidth="769.0">
+                    <items>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                           <children>
+                              <VBox alignment="TOP_CENTER" layoutX="-1.0" prefHeight="752.0" prefWidth="241.0">
+                                 <children>
+                                    <Panel prefHeight="467.0" prefWidth="241.0" styleClass="panel-info">
+                                        <heading>
+                                            <Label alignment="TOP_CENTER" styleClass="h3" text="Panel title" />
+                                        </heading>
+                                        <body>
+                                            <ListView styleClass="panel-body" prefWidth="241" />
+                                        </body>
+                                    </Panel>
+                                    <Panel prefHeight="291.0" prefWidth="241.0" styleClass="panel-danger">
+                                        <heading>
+                                            <Label styleClass="h3" text="Panel title"/>
+                                        </heading>
+                                        <body>
+                                            <Label text="Panel body"/>
+                                        </body>
+                                    </Panel>
+                                 </children>
+                              </VBox>
+                           </children></AnchorPane>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="643.0" prefWidth="506.0">
+                           <children>
+                              <VBox prefHeight="751.0" prefWidth="527.0">
+                                 <children>
+                                    <ClusteredGoogleMapView prefHeight="578.0" prefWidth="518.0" />
+                                    <HBox alignment="CENTER" prefHeight="167.0" prefWidth="527.0">
+                                       <children>
+                                          <Button mnemonicParsing="false" prefWidth="150" styleClass="btn,btn-lg, btn-success, btn-race" text="Start" />
+                                          <Button mnemonicParsing="false" prefWidth="200" styleClass="btn, btn-lg, btn-warning, btn-race" text="Activate Map" />
+                                          <Button mnemonicParsing="false" prefWidth="150" styleClass="btn, btn-lg, btn-danger, btn-race" text="Flags" />
+                                       </children>
+                                    </HBox>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </AnchorPane>
+                    </items>
+                  </SplitPane>
+               </children>
+            </VBox>
+         </content>
+      </TitledPane>
+   </children>
 </AnchorPane>
