--- a/src/main/resources/in/saeakgec/supra/view/AddRace.fxml
+++ b/src/main/resources/in/saeakgec/supra/view/AddRace.fxml
@@ -1,31 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-
-<?import org.kordamp.bootstrapfx.scene.layout.Panel?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.image.ImageView?>
-<AnchorPane prefHeight="700.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="in.saeakgec.supra.controller.AddRaceController">
+<?import org.kordamp.bootstrapfx.scene.layout.Panel?>
+
+<?import javafx.scene.control.Button?>
+<AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="in.saeakgec.supra.controller.AddRaceController">
    <children>
-      <Panel prefHeight="700.0" prefWidth="600.0" styleClass="panel-info">
+      <Panel prefHeight="400.0" prefWidth="500.0" styleClass="panel-info">
          <heading>
             <Label alignment="CENTER" styleClass="h3" text="Add Race" />
          </heading>
          <body>
-            <GridPane prefHeight="600.0" prefWidth="300.0">
+            <GridPane maxHeight="240" prefHeight="240.0" prefWidth="500.0">
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="50.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="50.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
@@ -36,14 +33,45 @@
                   <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="0">
+                  <HBox alignment="CENTER" maxHeight="40" prefHeight="40.0" prefWidth="300.0" GridPane.columnIndex="1">
                      <children>
-                        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <Label prefHeight="40.0" prefWidth="79.0" text="BLACK FLAG" />
-                              <ImageView fitHeight="160.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </VBox>
+                        <Label alignment="CENTER" prefHeight="26.0" prefWidth="100.0" text="Username" />
+                        <TextField prefWidth="200.0" promptText="Username" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" maxHeight="40" prefHeight="40.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <children>
+                        <Label alignment="CENTER" prefHeight="26.0" prefWidth="100.0" text="Username" />
+                        <TextField prefWidth="200.0" promptText="Username" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" maxHeight="40" prefHeight="40.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <children>
+                        <Label alignment="CENTER" prefHeight="26.0" prefWidth="100.0" text="Username" />
+                        <TextField prefWidth="200.0" promptText="Username" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" maxHeight="40" prefHeight="40.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <children>
+                        <Label alignment="CENTER" prefHeight="26.0" prefWidth="100.0" text="Username" />
+                        <TextField prefWidth="200.0" promptText="Username" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" maxHeight="40" prefHeight="40.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <children>
+                        <Label alignment="CENTER" prefHeight="26.0" prefWidth="100.0" text="Username" />
+                        <TextField prefWidth="200.0" promptText="Username" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" maxHeight="40" prefHeight="40.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                     <children>
+                        <Label alignment="CENTER" prefHeight="26.0" prefWidth="100.0" text="Username" />
+                        <TextField prefWidth="200.0" promptText="Username" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" maxHeight="40" prefHeight="40.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                     <children>
+                        <Button mnemonicParsing="false" text="Submit" styleClass="btn, btn-info" />
                      </children>
                   </HBox>
                </children>
@@ -52,4 +80,3 @@
       </Panel>
    </children>
 </AnchorPane>
-
