--- a/src/main/resources/in/saeakgec/supra/view/Dashboard.fxml
+++ b/src/main/resources/in/saeakgec/supra/view/Dashboard.fxml
@@ -1,42 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import org.kordamp.bootstrapfx.scene.layout.Panel?>
 
-<AnchorPane prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="in.saeakgec.supra.view.Dashboard">
+
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<AnchorPane prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="in.saeakgec.supra.controller.DashboardController">
    <children>
-      <Pane layoutX="0" layoutY="0.0" prefHeight="100.0" prefWidth="800.0">
+      <VBox layoutX="-1.0" prefHeight="800.0" prefWidth="800.0">
          <children>
-            <HBox layoutX="46.0" layoutY="27.0" prefHeight="46.0" prefWidth="281.0">
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button mnemonicParsing="false" text="Button" />
-                  <Label prefHeight="32.0" prefWidth="123.0" text="Label" />
+                  <Button mnemonicParsing="false" text="Add Race">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="38.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                  </Button>
                </children>
             </HBox>
-         </children></Pane>
-      <Pane layoutX="0.0" layoutY="100.0" prefHeight="700.0" prefWidth="800.0">
-         <children>
-            <SplitPane dividerPositions="0.48484848484848486" layoutX="1.0" layoutY="1.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="800.0">
+            <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="701.0" prefWidth="800.0">
               <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                      <children>
-                        <ScrollPane layoutX="-2.0" layoutY="55.0" prefHeight="279.0" prefWidth="798.0" />
-                        <Label layoutX="18.0" layoutY="5.0" prefHeight="46.0" prefWidth="165.0" text="Label" />
+                         <Panel prefHeight="345.0" prefWidth="798.0" styleClass="panel-warning">
+                             <heading>
+                                 <Label alignment="TOP_CENTER" styleClass="h3" text="Race Pending" />
+                             </heading>
+                             <body>
+                                 <ListView styleClass="panel-body" prefWidth="345" />
+                             </body>
+                         </Panel>
                      </children>
                   </AnchorPane>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                      <children>
-                        <ScrollPane layoutX="-2.0" layoutY="55.0" prefHeight="279.0" prefWidth="798.0" />
-                        <Label layoutX="18.0" layoutY="5.0" prefHeight="46.0" prefWidth="165.0" text="Label" />
+                        <Panel prefHeight="345.0" prefWidth="798.0" styleClass="panel-success">
+                            <heading>
+                                <Label alignment="TOP_CENTER" styleClass="h3" text="Race Completed" />
+                            </heading>
+                            <body>
+                                <ListView styleClass="panel-body" prefWidth="345" />
+                            </body>
+                        </Panel>
                      </children>
                   </AnchorPane>
               </items>
             </SplitPane>
-         </children></Pane>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
