Map with plotting done

--- a/src/main/resources/in/saeakgec/supra/view/AddFlag.fxml
+++ b/src/main/resources/in/saeakgec/supra/view/AddFlag.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -11,7 +13,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import org.kordamp.bootstrapfx.scene.layout.Panel?>
 
-<?import java.net.URL?>
 <AnchorPane prefHeight="700.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="in.saeakgec.supra.controller.AddFlagController">
    <stylesheets>
        <URL value="@../css/AddFlag.css" />
@@ -36,101 +37,129 @@
                    <children>
                        <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="0">
                            <children>
-                               <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" minWidth="200" minHeight="200">
+                               <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
                                    <children>
                                        <Label prefHeight="40.0" prefWidth="100.0" text="BLACK FLAG" />
                                        <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../img/flags/flag-black.png" />
-                                 </image></ImageView>
+                                 </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor></ImageView>
                                    </children>
                                </VBox>
                            </children>
                        </HBox>
                        <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                            <children>
-                               <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" minWidth="200" minHeight="200">
+                               <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
                                    <children>
                                        <Label prefHeight="40.0" prefWidth="176.0" text="BLACK FLAG + ORANGE DOT " />
                                        <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../img/flags/flag-black-dot.png" />
-                                 </image></ImageView>
+                                 </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor></ImageView>
                                    </children>
                                </VBox>
                            </children>
                        </HBox>
                        <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2">
                            <children>
-                               <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" minWidth="200" minHeight="200">
+                               <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
                                    <children>
                                        <Label prefHeight="40.0" prefWidth="83.0" text=" BLUE FLAG " />
                                        <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../img/flags/flag-blue.png" />
-                                 </image></ImageView>
+                                 </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor></ImageView>
                                    </children>
                                </VBox>
                            </children>
                        </HBox>
                        <HBox prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                            <children>
-                               <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" minWidth="200" minHeight="200">
+                               <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
                                    <children>
                                        <Label prefHeight="40.0" prefWidth="110.0" text="CHECKER FLAG" />
                                        <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" styleClass="flag">
                                  <image>
                                     <Image url="@../img/flags/flag-checked.png" />
-                                 </image></ImageView>
+                                 </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor></ImageView>
                                    </children>
                                </VBox>
                            </children>
                        </HBox>
                        <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                            <children>
-                               <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" minWidth="200" minHeight="200">
+                               <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
                                    <children>
                                        <Label prefHeight="40.0" prefWidth="183.0" text="RED  YELLOW STRIPED" />
-                                       <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" />
+                                       <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                                           <image>
+                                               <Image url="@../img/flags/flag-red-yellow.png" />
+                                           </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
+                                       </ImageView>
                                    </children>
                                </VBox>
                            </children>
                        </HBox>
                        <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                            <children>
-                               <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" minWidth="200" minHeight="200">
+                               <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
                                    <children>
                                        <Label prefHeight="40.0" prefWidth="91.0" text="RED FLAG " />
                                        <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../img/flags/flag-red.png" />
-                                 </image></ImageView>
+                                 </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor></ImageView>
                                    </children>
                                </VBox>
                            </children>
                        </HBox>
                        <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <children>
-                               <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" minWidth="200" minHeight="200">
+                               <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
                                    <children>
                                        <Label prefHeight="40.0" prefWidth="110.0" text="GREEN FLAG" />
                                        <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../img/flags/flag-green.png" />
-                                 </image></ImageView>
+                                 </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor></ImageView>
                                    </children>
                                </VBox>
                            </children>
                        </HBox>
                        <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                            <children>
-                               <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" minWidth="200" minHeight="200">
+                               <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
                                    <children>
                                        <Label prefHeight="40.0" prefWidth="103.0" text="WHITE FLAG" />
                                        <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                                            <image>
                                                <Image url="@../img/flags/flag-white.png" />
                                            </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
                                        </ImageView>
                                    </children>
                                </VBox>
@@ -138,13 +167,16 @@
                        </HBox>
                        <HBox prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                            <children>
-                               <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" minWidth="200" minHeight="200">
+                               <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
                                    <children>
                                        <Label prefHeight="40.0" prefWidth="120.0" text=" YELLOW FLAG " />
                                        <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../img/flags/flag-yellow.png" />
-                                 </image></ImageView>
+                                 </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor></ImageView>
                                    </children>
                                </VBox>
                            </children>
