--- a/src/main/resources/in/saeakgec/supra/view/Race.fxml
+++ b/src/main/resources/in/saeakgec/supra/view/Race.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.lynden.gmapsfx.ClusteredGoogleMapView?>
+<?import com.lynden.gmapsfx.GoogleMapView?>
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -8,7 +8,6 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import org.kordamp.bootstrapfx.scene.layout.Panel?>
@@ -33,15 +32,15 @@
                                             <Label alignment="TOP_CENTER" styleClass="h3" text="Panel title" />
                                         </heading>
                                         <body>
-                                            <ListView styleClass="panel-body" prefWidth="241" />
+                                            <ListView prefWidth="241" styleClass="panel-body" />
                                         </body>
                                     </Panel>
                                     <Panel prefHeight="291.0" prefWidth="241.0" styleClass="panel-danger">
                                         <heading>
-                                            <Label styleClass="h3" text="Panel title"/>
+                                            <Label styleClass="h3" text="Panel title" />
                                         </heading>
                                         <body>
-                                            <Label text="Panel body"/>
+                                            <Label text="Panel body" />
                                         </body>
                                     </Panel>
                                  </children>
@@ -51,7 +50,7 @@
                            <children>
                               <VBox prefHeight="751.0" prefWidth="527.0">
                                  <children>
-                                    <ClusteredGoogleMapView prefHeight="578.0" prefWidth="518.0" />
+                                    <GoogleMapView fx:id="googleMapView" prefHeight="600.0" prefWidth="527.0" />
                                     <HBox alignment="CENTER" prefHeight="167.0" prefWidth="527.0">
                                        <children>
                                           <Button mnemonicParsing="false" prefWidth="150" styleClass="btn,btn-lg, btn-success, btn-race" text="Start" />
