--- a/src/main/resources/in/saeakgec/supra/view/Auth.fxml
+++ b/src/main/resources/in/saeakgec/supra/view/Auth.fxml
@@ -2,6 +2,7 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -41,15 +42,20 @@
                      </children></HBox>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <TextField promptText="Username" styleClass="form" fx:id="authUsername" />
-                        <PasswordField promptText="Password" styleClass="form" fx:id="authPassword"/>
+                        <TextField fx:id="authUsername" promptText="Username" styleClass="form" />
+                        <PasswordField fx:id="authPassword" promptText="Password" styleClass="form" />
                      </children></HBox>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#handleButtonAction" styleClass="btn, btn-info, btn-block" text="Log in" fx:id="authSubmit" />
+                        <Button fx:id="authSubmit" mnemonicParsing="false" onAction="#handleButtonAction" styleClass="btn, btn-info, btn-block" text="Log in" />
                      </children></HBox>
                </children>
             </VBox>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                  <Label styleClass="alert" text="Label" visible="false" fx:id="alertLabel"/>
+               </children>
+            </HBox>
          </children>
       </GridPane>
    </children>
