--- a/src/main/resources/in/saeakgec/supra/view/AddRace.fxml
+++ b/src/main/resources/in/saeakgec/supra/view/AddRace.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.lynden.gmapsfx.GoogleMapView?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -9,45 +12,65 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import org.kordamp.bootstrapfx.scene.layout.Panel?>
 
-<?import javafx.scene.control.Button?>
-<AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Panel prefHeight="400.0" prefWidth="500.0" styleClass="panel-info">
-         <heading>
-            <Label alignment="CENTER" styleClass="h3" text="Add Race" />
-         </heading>
-         <body>
-            <GridPane maxHeight="240" prefHeight="240.0" prefWidth="500.0">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <HBox alignment="CENTER" maxHeight="40" prefHeight="40.0" prefWidth="300.0" GridPane.columnIndex="1">
-                     <children>
-                        <Label alignment="CENTER" prefHeight="26.0" prefWidth="100.0" text="nameTextView" />
-                        <TextField prefWidth="200.0" promptText="Username" fx:id="name"/>
-                     </children>
-                  </HBox>
+      <SplitPane dividerPositions="0.5064935064935064" prefHeight="500.0" prefWidth="1000.0">
+        <items>
+           <Panel prefHeight="500.0" prefWidth="500.0" styleClass="panel-info">
+              <heading>
+                 <Label alignment="CENTER" styleClass="h3" text="Add Race" />
+              </heading>
+              <body>
+                 <GridPane maxHeight="240" prefHeight="240.0" prefWidth="500.0">
+                    <columnConstraints>
+                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
+                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                       <ColumnConstraints />
+                    </columnConstraints>
+                    <rowConstraints>
+                       <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
+                       <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
+                       <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
+                       <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                    <children>
+                       <HBox alignment="CENTER" maxHeight="40" prefHeight="40.0" prefWidth="300.0" GridPane.columnIndex="1">
+                          <children>
+                             <Label alignment="CENTER" prefHeight="26.0" prefWidth="100.0" text="Username:" />
+                             <TextField fx:id="name" prefWidth="200.0" promptText="Username" />
+                          </children>
+                       </HBox>
+                       <HBox alignment="CENTER" maxHeight="40" prefHeight="40.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                          <children>
+                             <Label alignment="CENTER" prefHeight="26.0" prefWidth="100.0" text="From: " />
+                             <TextField fx:id="fromText" prefWidth="200.0" promptText="Username" />
+                          </children>
+                       </HBox>
+                       <HBox alignment="CENTER" maxHeight="40" prefHeight="40.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                          <children>
+                             <Label alignment="CENTER" prefHeight="26.0" prefWidth="100.0" text="To: " />
+                             <TextField fx:id="toText" prefWidth="200.0" promptText="Username" />
+                          </children>
+                       </HBox>
 
-                  <HBox alignment="CENTER" maxHeight="40" prefHeight="40.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
-                     <children>
-                        <Button mnemonicParsing="false" text="Submit" styleClass="btn, btn-info" fx:id="addRace" />
-                     </children>
-                  </HBox>
+                       <HBox alignment="CENTER" maxHeight="40" prefHeight="40.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                          <children>
+                             <Button fx:id="addRace" mnemonicParsing="false" styleClass="btn, btn-info" text="Submit" />
+                          </children>
+                       </HBox>
+                    </children>
+                 </GridPane>
+              </body>
+           </Panel>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="500.0" prefWidth="500.0">
+               <children>
+                  <GoogleMapView fx:id="mapView" prefHeight="500.0" prefWidth="489.0" />
+                   <Button fx:id="clearButton" layoutX="30.0" layoutY="30.0" mnemonicParsing="false"  text="Clear" styleClass="btn, btn-danger" />
+                   <Button fx:id="directionButton" layoutX="100.0" layoutY="30.0" mnemonicParsing="false"  text="Get Direction" styleClass="btn, btn-warning"/>
                </children>
-            </GridPane>
-         </body>
-      </Panel>
+          </AnchorPane>
+        </items>
+      </SplitPane>
    </children>
 </AnchorPane>
