--- a/src/main/resources/in/saeakgec/supra/view/AddFlag.fxml
+++ b/src/main/resources/in/saeakgec/supra/view/AddFlag.fxml
@@ -13,17 +13,17 @@
 <?import javafx.scene.layout.VBox?>
 <?import org.kordamp.bootstrapfx.scene.layout.Panel?>
 
-<AnchorPane prefHeight="700.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="in.saeakgec.supra.controller.AddFlagController">
+<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" >
    <stylesheets>
        <URL value="@../css/AddFlag.css" />
    </stylesheets>
     <children>
-       <Panel prefHeight="700.0" prefWidth="600.0" styleClass="panel-info">
+       <Panel prefHeight="400.0" prefWidth="600.0" styleClass="panel-info">
            <heading>
                <Label alignment="CENTER" styleClass="h3" text="Click on Flag to drop" />
            </heading>
            <body>
-               <GridPane prefHeight="600.0" prefWidth="600.0">
+               <GridPane prefHeight="400.0" prefWidth="600.0">
                    <columnConstraints>
                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
@@ -32,42 +32,9 @@
                    <rowConstraints>
                        <RowConstraints minHeight="10.0" prefHeight="200.0" vgrow="SOMETIMES" />
                        <RowConstraints minHeight="10.0" prefHeight="200.0" vgrow="SOMETIMES" />
-                       <RowConstraints minHeight="10.0" prefHeight="200.0" vgrow="SOMETIMES" />
                    </rowConstraints>
                    <children>
-                       <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="0">
-                           <children>
-                               <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
-                                   <children>
-                                       <Label prefHeight="40.0" prefWidth="100.0" text="BLACK FLAG" />
-                                       <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../img/flags/flag-black.png" />
-                                 </image>
-                                 <cursor>
-                                    <Cursor fx:constant="HAND" />
-                                 </cursor></ImageView>
-                                   </children>
-                               </VBox>
-                           </children>
-                       </HBox>
-                       <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
-                           <children>
-                               <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
-                                   <children>
-                                       <Label prefHeight="40.0" prefWidth="176.0" text="BLACK FLAG + ORANGE DOT " />
-                                       <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../img/flags/flag-black-dot.png" />
-                                 </image>
-                                 <cursor>
-                                    <Cursor fx:constant="HAND" />
-                                 </cursor></ImageView>
-                                   </children>
-                               </VBox>
-                           </children>
-                       </HBox>
-                       <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2">
+                       <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="0" fx:id="blueFlag">
                            <children>
                                <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
                                    <children>
@@ -83,23 +50,8 @@
                                </VBox>
                            </children>
                        </HBox>
-                       <HBox prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
-                           <children>
-                               <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
-                                   <children>
-                                       <Label prefHeight="40.0" prefWidth="110.0" text="CHECKER FLAG" />
-                                       <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" styleClass="flag">
-                                 <image>
-                                    <Image url="@../img/flags/flag-checked.png" />
-                                 </image>
-                                 <cursor>
-                                    <Cursor fx:constant="HAND" />
-                                 </cursor></ImageView>
-                                   </children>
-                               </VBox>
-                           </children>
-                       </HBox>
-                       <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+
+                       <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" fx:id="redYellowFlag">
                            <children>
                                <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
                                    <children>
@@ -116,7 +68,7 @@
                                </VBox>
                            </children>
                        </HBox>
-                       <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                       <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" fx:id="redFlag">
                            <children>
                                <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
                                    <children>
@@ -132,7 +84,7 @@
                                </VBox>
                            </children>
                        </HBox>
-                       <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                       <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.rowIndex="1" fx:id="greenFlag">
                            <children>
                                <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
                                    <children>
@@ -148,24 +100,7 @@
                                </VBox>
                            </children>
                        </HBox>
-                       <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
-                           <children>
-                               <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
-                                   <children>
-                                       <Label prefHeight="40.0" prefWidth="103.0" text="WHITE FLAG" />
-                                       <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
-                                           <image>
-                                               <Image url="@../img/flags/flag-white.png" />
-                                           </image>
-                                 <cursor>
-                                    <Cursor fx:constant="HAND" />
-                                 </cursor>
-                                       </ImageView>
-                                   </children>
-                               </VBox>
-                           </children>
-                       </HBox>
-                       <HBox prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+                       <HBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="yellowFlag">
                            <children>
                                <VBox alignment="CENTER" minHeight="200" minWidth="200" prefHeight="200.0" prefWidth="100.0">
                                    <children>
